metrics/add-metrics-redis-and-logs

--- a/internal/config/prometheus/prometheus.yml
+++ b/internal/config/prometheus/prometheus.yml
@@ -3,3 +3,6 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ["kinogo:4000"]
+  - job_name: postgres-exporter
+    static_configs:
+      - targets: ["postgres-exporter:9187"]
