--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "postgres:192.168.1.1"
     ports:
       - "4000:4000"
+
   redis:
     image: redis/redis-stack:latest
     container_name: redis-stack
@@ -24,6 +25,7 @@ services:
       - "6379:6379"
       - "8001:8001"
     command: [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+
   grafana:
     image: grafana/grafana-oss
     container_name: grafana
@@ -34,11 +36,12 @@ services:
       - "postgres:192.168.1.1"
     ports:
      - '3000:3000'
+
   prometheus:
     image: prom/prometheus:latest
+    container_name: prometheus
     volumes:
       - ./internal/config/prometheus/:/etc/prometheus/
-    container_name: prometheus
     hostname: prometheus
     command:
       - --config.file=/etc/prometheus/prometheus.yml
@@ -47,3 +50,29 @@ services:
     restart: unless-stopped
     environment:
       TZ: "Europe/Moscow"
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    ports:
+      - "9080:9080"
+    volumes:
+      - ./logs/:/var/log
+    command: -config.file=/etc/promtail/config.yml
+
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter
+    container_name: postgres-exporter
+    ports:
+      - "9187:9187"
+    environment:
+      DATA_SOURCE_NAME: "postgresql://postgres:RalphDeadwave562208@91.215.21.236:5432/kinogo_db?sslmode=disable"
+    links:
+      - prometheus
