--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_USER=postgres
 DB_PASSWORD=56228478
 DB_NAME=kinogo_db
 DB_HOST=91.215.21.236
-REDIS_ADDR=redis-stack
+REDIS_ADDR=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=RalphDeadwave562208!
 DEBUG=true
