--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ LOGGER_LEVEL=info
 DB_USER=postgres
 DB_PASSWORD=56228478
 DB_NAME=kinogo_db
-DB_HOST=91.215.21.236
-REDIS_ADDR=127.0.0.1
+DB_HOST=192.168.1.1
+REDIS_ADDR=192.168.1.1
 REDIS_PORT=6379
-REDIS_USERNAME=hack
-REDIS_PASSWORD=123456789
-REDIS_DB_ID=0
+REDIS_USERNAME=ra1ph
+REDIS_PASSWORD=RalphDeadwave562208!
+REDIS_DB_ID=1
