--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+web/node_modules
+
 # Backend
-media/
-logs/
-.env
+backend/media/
+backend/logs/
+backend/.env
 
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -13,7 +14,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 frontend/node_modules
-dist
 dist-ssr
 *.local
 
