--- a/backend/config/envoy.yaml
+++ b/backend/config/envoy.yaml
@@ -42,6 +42,9 @@ static_resources:
                             cors:
                               allow_origin_string_match:
                                 - prefix: "http://localhost:5173"
+                                - prefix: "http://localhost"
+                                - prefix: "http://127.0.0.1:5173"
+                                - prefix: "http://127.0.0.1"
                               allow_methods: GET, PUT, DELETE, POST, OPTIONS
                               allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                               max_age: "1728000"
@@ -60,7 +63,7 @@ static_resources:
               - endpoint:
                   address:
                     socket_address:
-                      address: kinogo
+                      address: backend
                       port_value: 8080
 
 admin:
