--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  kinogo:
-    container_name: kinogo
+  backend:
+    container_name: backend
     build:
       context: backend/
       target: dev
@@ -9,6 +9,7 @@ services:
       - ./backend:/app
     ports:
       - "8080:8080"
+      - "4000:4000"
 
   envoy:
     image: envoyproxy/envoy:v1.30-latest
@@ -18,5 +19,13 @@ services:
       - "9901:9901"
     volumes:
       - ./backend/config/envoy.yaml:/etc/envoy/envoy.yaml
-    links:
-      - kinogo
+
+  frontend:
+    image: nginx:stable-alpine
+    container_name: frontend
+    ports:
+      - "80:80"
+    volumes:
+      - ./frontend/dist:/usr/share/nginx/html
+      - ./backend/config/nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: always
