--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,14 @@
     "@milkdown/theme-nord": "^7.4.0",
     "@milkdown/utils": "^7.4.0",
     "@telegram-auth/react": "^1.0.3",
+    "@types/hookrouter": "^2.2.8",
     "@vidstack/react": "^1.11.24",
+    "cookie": "^0.6.0",
     "google-protobuf": "^3.21.2",
     "grpc-web": "^1.5.0",
     "hls.js": "^1.5.11",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "media-icons": "^1.1.4",
     "nouislider": "^15.7.2",
     "protoc-gen-ts": "^0.8.7",
@@ -32,6 +36,8 @@
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.12",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20.14.5",
     "@types/nouislider": "^15.0.0",
     "@types/react": "^18.2.66",
