--- a/backend/config/envoy.yaml
+++ b/backend/config/envoy.yaml
@@ -45,7 +45,7 @@ static_resources:
                                 - prefix: "http://127.0.0.1:5173"
                                 - prefix: "http://127.0.0.1"
                               allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                              allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                              allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,uuid,token
                               max_age: "1728000"
                               expose_headers: custom-header-1,grpc-status,grpc-message
 
