--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@milkdown/utils": "^7.4.0",
     "@telegram-auth/react": "^1.0.3",
     "@types/hookrouter": "^2.2.8",
+    "@types/uuid": "^10.0.0",
     "@vidstack/react": "^1.11.24",
     "cookie": "^0.6.0",
     "google-protobuf": "^3.21.2",
@@ -32,7 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.12",
