--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "web-vitals": "^4.2.1"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.12",
